[package]
name = "passgenr"
version = "0.2.0"
authors = ["Taylor Hornby <taylor@defuse.ca>"]
license = "MIT"
repository = "https://github.com/defuse/passgenr"
documentation = "https://docs.rs/passgenr/0.1.0/passgenr/"
description = "A library for generating cryptographically-secure passwords in Rust."

[dependencies]
rand = "0.4"
getopts = "0.2"
